<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/nameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textCapWords"/>


        <TextView
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            style="@style/CustomText"
            android:text="@string/toppings" />

        <CheckBox
            android:id="@+id/whippedCreamCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:paddingLeft="24dp"
            android:text="@string/cream"
            android:textAllCaps="true"
            android:textSize="16sp"/>

        <CheckBox
            android:id="@+id/chocolateCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:paddingLeft="24dp"
            android:text="@string/chocolate"
            android:textAllCaps="true"
            android:textSize="16sp"/>

        <TextView
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/quantity"
            style="@style/CustomText"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp">

            <Button
                android:id="@+id/decrementButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="@string/minus"
                android:textAllCaps="true" />

            <TextView
                android:id="@+id/quantityTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="2"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                />
            <Button
                android:id="@+id/incrementButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="@string/plus"
                android:textAllCaps="true" />


        </LinearLayout>

        <Button
            android:id="@+id/submitOrderButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/order"
            android:textAllCaps="true"
            />

    </LinearLayout>
</ScrollView>